--- a/recipes/templates/recipes/index.html
+++ b/recipes/templates/recipes/index.html
@@ -9,6 +9,14 @@ Scrumptious Recipes
     <nav>
         <a href="{% url 'recipe_list' %}">Main Page</a>
         <a href="{% url 'create_recipe' %}">Create a recipe!</a>
+
+        {% if user.is_authenticated %}
+            <h5>Hello, {{ user.username }}</h5>
+            <a href="{% url 'logout_view' %}">Log Out</a>
+        {% else %}
+            <a href="{% url 'create_user' %}">Sign Up!</a>
+            <a href="{% url 'login_view' %}">Login!</a>
+        {% endif %}
     </nav>
 </header>
 <body>
