--- a/recipes/templates/recipes/index.html
+++ b/recipes/templates/recipes/index.html
@@ -8,10 +8,10 @@ Scrumptious Recipes
 <header>
     <nav>
         <a href="{% url 'recipe_list' %}">Main Page</a>
-        <a href="{% url 'create_recipe' %}">Create a recipe!</a>
-
         {% if user.is_authenticated %}
+        <a href="{% url 'create_recipe' %}">Create a recipe!</a>
             <h5>Hello, {{ user.username }}</h5>
+            <a href="{% url 'user_recipes' %}">Your Recipes</a>
             <a href="{% url 'logout_view' %}">Log Out</a>
         {% else %}
             <a href="{% url 'create_user' %}">Sign Up!</a>
